[client menu] fix vertical alignment

--- a/shuttleofx_client/static_tmp/styles/styles.less
+++ b/shuttleofx_client/static_tmp/styles/styles.less
@@ -523,7 +523,8 @@ ul.right-nav li .fa{
             li {
                 width: auto;
                 border: none;
-                min-height: 26px;
+                margin-top: 2px;
+                margin-bottom: 2px;
                 a {
                     width: auto;
                     max-width: 100%;
